apps/web-app/src/styles/base.css
html {
	font-size: 62.5%;
}

html,
body {
	height: 100%;
}

body {
	font-size: 1.6rem;
	line-height: 1.6;
	background: var(--clr-bg);
  font-family: 'Inter Variable', sans-serif;
}

button {
	appearance: none;
	outline: none;
	border: none;
	background: transparent;
	cursor: pointer;
	color: inherit;
}

li {
	list-style: none;
}

ul {
	padding: 0;
}

input {
	border: none;
}

button:focus-visible {
	outline: 0.2rem solid var(--clr-focus);
	outline-offset: 0.2rem;
}

/* width */
::-webkit-scrollbar {
  width: 1.2rem;
}

/* Track */
::-webkit-scrollbar-track {
  background: var(--clr-scrollbar-track);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--clr-scrollbar-thumb);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--clr-scrollbar-thumb-hover);
}

